added gradle args.